--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "eta": "^1.12.3",
     "express": "^4.18.2",
     "fuzzy-search": "^3.2.1",
-    "nodemon": "^2.0.20"
+    "nodemon": "^2.0.20",
+    "bcrypt": "^5.1.0"
   }
 }
