--- a/package.json
+++ b/package.json
@@ -12,11 +12,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "body-parser": "^1.20.1",
     "eta": "^1.12.3",
     "express": "^4.18.2",
     "fuzzy-search": "^3.2.1",
     "nodemon": "^2.0.20",
-    "bcrypt": "^5.1.0"
+    "better-sqlite3": "^9.3.0"
   }
 }
