--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon -e js,eta,css index.js -env dev",
-    "prod": "node index.js -env prod"
+    "prod": "node index.js -env prod",
+    "normalize-tags": "node Utilities/NormalizeTags.js"
   },
   "keywords": [],
   "author": "",
